<resources>
    <string name="app_name">AndroidHometasks</string>
    <string name="TextOne">TextView 1</string>
    <string name="TextTwo">TextView 2</string>
    <string name="ButtonText">Click on me!</string>
    <string name="ButtonDz1Text">Hometask 1</string>
    <string name="ButtonDz2Text">Hometask 2</string>
    <string name="ButtonDz3Text">Hometask 3</string>
    <string name="ButtonDz4Text">Hometask 4</string>
    <string name="Austria">Австрия</string>
    <string name="Poland">Польша</string>
    <string name="Italy">Италия</string>
    <string name="Colombia">Колумбия</string>
    <string name="Madagascar">Мадагаскар</string>
    <string name="Thailand">Таиланд</string>
    <string name="Denmark">Дания</string>
    <string name="GetImage">Get image</string>
    <string name="Anim">Animation</string>
    <string name="Clock">Clock</string>
    <string name="Diagram">Diagram</string>
    <string name="ShowDiagram">Show Diagram!</string>
    <string name="WIFI">WIFI Status</string>
    <string name="ButtonDz5Text">Hometask 5</string>
    <string name="ChangeWIFI">Change WIFI State!</string>
    <string name="searchButton">Search</string>
    <string name="addButton">Add a new student</string>
    <string name="search_student">Search Person</string>
    <string name="ButtonDz6Text">Hometask 6</string>
    <string name="addNewPerson">Add New Person</string>
    <string name="ButtonDz8Text">Hometask 8</string>
</resources>
