<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94a8b4"
    android:orientation="vertical"
    tools:context=".Dz2.Dz2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Austria"
                    style="@style/Countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Austria" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/AustriaFlag"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/TextView1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/RedFlag">

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/TextColor">

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/RedFlag">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Poland"
                    style="@style/Countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Poland" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/PolandFlag"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/TextColor"></FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/RedFlag"></FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Italy"
                    style="@style/Countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Italy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ItalyFlag"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/GreenFlag"></FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/TextColor"></FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/RedFlag"></FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Colombia"
                    style="@style/Countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Colombia" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ColombiaFlag"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:weightSum="100">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@color/YellowFlag"></FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:background="@color/colorPrimary"></FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:background="@color/RedFlag"></FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/Countries"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Madagascar"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/MadagascarFlag"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/TextColor"
                    android:layout_weight="1"></FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:weightSum="100">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:background="@color/RedFlag"></FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:background="@color/GreenFlag"></FrameLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Thailand"
                    style="@style/Countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Thailand" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ThailandFlag"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/RedFlag">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/TextColor">

                    </FrameLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </FrameLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/TextColor">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/RedFlag">

                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Denmark"
                    style="@style/Countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Denmark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="280dp"
                android:orientation="horizontal"
                android:weightSum="37">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="21"

                    android:orientation="vertical"
                    android:weightSum="28">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="12"
                        android:background="@color/RedFlag">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/TextColor">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="12"
                        android:background="@color/RedFlag">

                    </FrameLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@color/TextColor">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:orientation="vertical"
                    android:weightSum="28">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="12"
                        android:background="@color/RedFlag">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/TextColor">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="12"
                        android:background="@color/RedFlag"></FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>